Fix sizing so no overlap

--- a/src/style.css
+++ b/src/style.css
@@ -62,7 +62,7 @@ body {
 
 div.gameboard {
   display: grid;
-  grid-template: repeat(10, 2.5vw) / repeat(10, 2.5vw);
+  grid-template: repeat(10, 2vw) / repeat(10, 2vw);
   border: 0.5px solid #000;
   width: min-content;
   justify-self: center;
